--- a/host/invite/jump.html
+++ b/host/invite/jump.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="refresh" content="3;url=https://itunes.apple.com/"> 
+<meta http-equiv="refresh" content="3;url=http://fir.im/oneto"> 
 <title>一圈</title>
 <script src="http://libs.baidu.com/jquery/2.0.3/jquery.min.js"></script>
 <style>
