Fix Bugs of Topic Invitation

--- a/host/invite/error.html
+++ b/host/invite/error.html
@@ -14,7 +14,7 @@
 <!-- HTML -->
 <div class="container">
   <div class="title">一圈<br></div>
-  <div class="notify">改邀请链接已被成功注册。<br>若要继续，请向一圈用户索取新的邀请链接。<br></div>
+  <div class="notify">该邀请链接已被成功注册。<br>若要继续，请向一圈用户索取新的邀请链接。<br></div>
 </div>
 <!-- Javascript -->
 
