--- a/website/index.html
+++ b/website/index.html
@@ -73,7 +73,7 @@
  
 		<div class="section-title">
 			<h2>我们深知你在想什么，这是我们产品的基石</h2>
-			<h4>对于用户体验非同一般的思考，贯彻产品设计点点滴滴的细节。</h4>
+			<h4>对于社交价值非同一般的思考，贯彻用户体验一丝一毫的细节。</h4>
 		</div>
 		
 		<section class="row features">
@@ -82,7 +82,7 @@
 					<img src="images/service_01.png" alt="analytics-icon">
 					<div class="caption">
 						<h3>精致的社交关系</h3>
-						<p>从最紧密的关系开始逐层扩展，从关系本质构建社交网络。抽丝剥茧，让圈子在不自觉之中达到最佳的平衡。</p>
+						<p style="text-align: left">从最紧密的关系开始逐层扩展，从关系本质构建社交网络。抽丝剥茧，让圈子在不自觉之中达到最佳的平衡。</p>
 					</div>
 				</div><! --/thumbnail -->
 			</div><! --/col-sm-6-->
@@ -92,7 +92,7 @@
 					<img src="images/service_02.png" alt="analytics-icon">
 					<div class="caption">
 						<h3>有意义的社交内容</h3>
-						<p>从内容的发送到展现，我们通过精巧的设计，极力避开恼人的内容，让你每一次的打开与刷新更富意义。</p>
+						<p style="text-align: left">从内容的发送到展现，我们通过精巧的设计，极力避开恼人的内容，让你每一次的打开与刷新更富意义。</p>
 					</div>
 				</div><! --/thumbnail -->
 			</div><! --/col-sm-6-->
@@ -102,7 +102,7 @@
 					<img src="images/service_03.png" alt="analytics-icon">
 					<div class="caption">
 						<h3>化繁为简的设计</h3>
-						<p>对产品效能的不断拷问，深入到每一个设计的抉择。专注最核心的模块和组件，苛求用户最在乎的极致体验。</p>
+						<p style="text-align: left">对产品效能的不断拷问，深入到每一个设计的抉择。专注最核心的模块和组件，苛求用户最在乎的极致体验。</p>
 					</div>
 				</div><! --/thumbnail -->
 			</div><! --/col-sm-6-->
@@ -112,7 +112,7 @@
 					<img src="images/service_04.png" alt="analytics-icon">
 					<div class="caption">
 						<h3>看不见的可靠保障</h3>
-						<p>我们决不在幕后偷工减料，对数据和隐私的严格保护，是一圈的产品操守，更是对用户最大的尊重。</p>
+						<p style="text-align: left">我们决不在幕后偷工减料，对数据和隐私的严格保护，是一圈的产品操守，更是对用户最大的尊重。</p>
 					</div>
 				</div><! --/thumbnail -->
 			</div><! --/col-sm-6-->
