--- a/website/index.html
+++ b/website/index.html
@@ -117,22 +117,17 @@
 				</div><! --/thumbnail -->
 			</div><! --/col-sm-6-->
 		</section><! --/section -->
- 
+</div> 
 
 	    <! -- ******************** CLIENTS SECTION ******************** -->	 
+		<div class="userbg">
 		<div class="section-title">
-			<h2>每个人都是一股不可阻挡的辐射力量</h2>
+			<h1>每个人都是一股不可阻挡的辐射力量</h1>
 			<br>
-			<h4>在一个平等的世界里，尽情伸展自己的触角，构建专属的群体空间</h4>
+			<h3>在一个平等的世界里，尽情伸展自己的触角，构建专属的群体空间</h3>
 		</div>
-	
-		<section class="row clientlogo breath">
-		<!--
-			<div class="col-md-12 text-center"> 
-				<img src="images/client-logos.png" alt="client-logos">
-			</div>
-			-->
-		</section><! --/section -->
+		</div>
+ <div class="container" id="explore">
  
 	</div><! --/container -->
  
