- Update the mock view and dummy text;

--- a/website/index.html
+++ b/website/index.html
@@ -62,12 +62,12 @@
  
 		<div class="section-title">
 			<h2>社交未曾远离，我们让它变得更理性</h2>
-			<h4>当我们呼喊着社交已死的时候，是否想过是否死的不该是社交网络，而是愚蠢的社交网络。</h4>
+			<h4>当我们呼喊着社交已死的时候，是否想过死的不该是社交网络，而是愚蠢的社交网络。</h4>
 		</div>
 
 		<section class="row heroimg breath">
 			<div class="col-md-12 text-center"> 
-				<img src="images/flat-mockup-template.png" alt="flat-mockup-template">
+				<img src="images/Mobile-mockup.png" alt="flat-mockup-template">
 			</div>
 		</section><! --/section -->
  
@@ -124,7 +124,7 @@
 		<div class="section-title">
 			<h1>每个人都是一股不可阻挡的辐射力量</h1>
 			<br>
-			<h3>在一个平等的世界里，尽情伸展自己的触角，构建专属的群体空间</h3>
+			<h3>建成一个平等、美好、高效的世界，需要网络中每一个个体的推动和延伸。</h3>
 		</div>
 		</div>
  <div class="container" id="explore">
@@ -154,7 +154,7 @@
 					</div><! --/col-md-6 -->
 					
 					<div class="col-md-6">
-						<div class="testblock">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </div>
+						<div class="testblock">“由于工作的缘故，我接触过各种各样的社交软件。而像一圈这样严肃的，倒是头一回。我觉得上面的社交内容都比较有目的性，而且基本都是同一个圈子里的人，就会比较有价值。我逐渐开始把我创投界的朋友都带到一圈，大家不仅有一个比较丰富自由的交流环境，点对点沟通也比较方便。”</div>
 						<div class="clientblock"> 
 							<img src="images/customer-img-willwang.jpg" alt=".">
 							<p><strong>Will Wang</strong> <br>
@@ -172,7 +172,7 @@
 					</div>
 
 					<div class="col-md-6">
-						<div class="testblock">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </div>
+						<div class="testblock">我身边有许多IT届的朋友，一直很想有一个单独的地方能够把这些朋友都聚起来。可是现有的一些平台不是太过于繁杂低效，就是不太适合产生有意义的社交。我很喜欢一圈这样的产品，不仅让我聚拢老朋友，还遇到很多圈子里的新朋友。大家其乐融融，互通有无。</div>
 						<div class="clientblock"> 
 							<img src="images/customer-img-marong.jpg" alt=".">
 							<p><strong>马融</strong> <br>
@@ -182,7 +182,7 @@
 					</div><! --/col-md-6 -->
 
 					<div class="col-md-6">
-						<div class="testblock">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </div>
+						<div class="testblock">我发现这里的话题比较有意思。作为一个需要天天寻找新奇事物、激发生活灵感的同学，我总能在这里找到一些新的话题和好玩的事物。这里的氛围比较轻松，大家平时对话时正经却不乏幽默，感觉就像是每天都能和朋友们去咖啡厅坐下喝喝东西、聊聊天。</div>
 						<div class="clientblock"> 
 							<img src="images/customer-img-huyu.jpg" alt=".">
 							<p><strong>胡昱</strong> <br>
