- update https - use sina https can instead of baidu http can

--- a/host/invite/jump.html
+++ b/host/invite/jump.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>一圈</title>
-<script src="http://libs.baidu.com/jquery/2.0.3/jquery.min.js"></script>
+<script src="https://lib.sinaapp.com/js/jquery/2.0.3/jquery-2.0.3.min.js"></script>
 
 
     <script type="text/javascript">
