- revise the official website; - change the removeGetuiClientID logic;

--- a/website/index.html
+++ b/website/index.html
@@ -32,7 +32,7 @@
 			<div class="logo"> <a href="index.html#"><img src="images/logo.png" alt="logo"></a>
 			</div>
  
-			<h1>是时候，回归社交的核心价值</h1>
+			<h1>朋友们新的聚集地</h1>
  
 			<div class="row">
 				<div class="col-md-6 col-sm-12 col-md-offset-3 subscribe">
@@ -61,8 +61,8 @@
 	<div class="container" id="explore">
  
 		<div class="section-title">
-			<h2>社交未曾远离，我们让它变得更理性</h2>
-			<h4>当我们呼喊着社交已死的时候，是否想过死的不该是社交网络，而是愚蠢的社交网络。</h4>
+			<h2>社交远未止此，我们让它变得更加理性和智能</h2>
+			<!--<h4>当我们呼喊着社交已死的时候，是否想过死的不该是社交网络，而是愚蠢的社交网络。</h4>-->
 		</div>
 
 		<section class="row heroimg breath">
@@ -124,7 +124,7 @@
 		<div class="section-title">
 			<h1>每个人都是一股不可阻挡的辐射力量</h1>
 			<br>
-			<h3>建成一个平等、美好、高效的世界，需要网络中每一个个体的推动和延伸。</h3>
+			<h3>推动建成一个平等、美好、高效的社交空间。</h3>
 		</div>
 		</div>
  <div class="container" id="explore">
@@ -154,7 +154,7 @@
 					</div><! --/col-md-6 -->
 					
 					<div class="col-md-6">
-						<div class="testblock">“由于工作的缘故，我接触过各种各样的社交软件。而像一圈这样严肃的，倒是头一回。我觉得上面的社交内容都比较有目的性，而且基本都是同一个圈子里的人，就会比较有价值。我逐渐开始把我创投界的朋友都带到一圈，大家不仅有一个比较丰富自由的交流环境，点对点沟通也比较方便。”</div>
+						<div class="testblock">“由于工作的缘故，我接触过各种各样的社交软件。而像一圈这样严肃的，倒是头一回。我觉得上面的社交内容都比较有目的性，而且基本都是同一个圈子里的人，就会比较有价值。我逐渐开始把我创投界的朋友都带到一圈，大家探讨个什么事或者点对点沟通都比较方便。”</div>
 						<div class="clientblock"> 
 							<img src="images/customer-img-willwang.jpg" alt=".">
 							<p><strong>Will Wang</strong> <br>
@@ -249,7 +249,7 @@
                     成为一名构造者，并不需要您身处特定的行业，或已取得显著的成就。只要您具有改变现状的强烈意愿、带动社区其他成员共同实践的气质 以及 对人性和社会价值的独到洞察，都可以加入到构造者的圈子，运用一圈亲手打造一个新的社交网络。
                 </p>
 				<h6>我都能遇到什么样的人？我应该邀请什么样的人？</h6>
-				<p>为了保证社交的相关性，一圈并不是一个完全开放的社区。不过在您的好友之外，您还可以结识许多和您有着相似背景、兴趣和社会关系链的新朋友，还有一定概率遇到社交距离远一些的朋友。但不论远近如何，任何一种相识都会以实际有意义的信息和交互作为契机。</p>
+				<p>为了保证社交的相关性，一圈并不是一个完全开放的社区。不过在您的好友之外，您可以结识许多和您有着相似背景、兴趣和社会关系链的新朋友，还有一定概率遇到社交距离远一些但背景多元的朋友。但不论远近如何，任何一种相识都会以实际有意义的信息和交互作为契机。</p>
 			</div><! --/col-md-6 -->
 			
 			<div class="col-md-6">
@@ -293,7 +293,7 @@
 		<div class="container">
 			<section class="row breath">
 				<div class="col-md-12 footerlinks">
-					<p>&copy; 2015 上海圈逸网络科技有限公司 保留所有权利</p>
+					<p>&copy; 2015 上海圈逸网络科技有限公司 保留所有权利 <a href="http://www.miitbeian.gov.cn/" target="_BLANK">沪ICP备15012546号</a></p>
 				</div>
 			</section><! --/section -->
 		</div><! --/container -->
