small fix of website

--- a/website/index.html
+++ b/website/index.html
@@ -142,7 +142,7 @@
 				
 				<section class="row breath">
 					<div class="col-md-6">
-						<div class="testblock">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </div>
+						<div class="testblock">“一圈最吸引我的地方在于其独特的社交属性，这种属性使得它的好友关系不那么封闭却也不太过开放。这种恰如其分的大小使得你能在一圈上看到的多是你真正关心的、感兴趣的、有意思的话题内容。这也让每天在社交应用上花费的时间变得更值得一些。”</div>
 						<div class="clientblock"> 
 							<img src="images/customer-img-1.jpg" alt=".">
 							<p><strong>Delton Ding</strong> <br>
@@ -172,7 +172,7 @@
 					</div>
 
 					<div class="col-md-6">
-						<div class="testblock">我身边有许多IT届的朋友，一直很想有一个单独的地方能够把这些朋友都聚起来。可是现有的一些平台不是太过于繁杂低效，就是不太适合产生有意义的社交。我很喜欢一圈这样的产品，不仅让我聚拢老朋友，还遇到很多圈子里的新朋友。大家其乐融融，互通有无。</div>
+						<div class="testblock">“我身边有许多IT届的朋友，一直很想有一个单独的地方能够把这些朋友都聚起来。可是现有的一些平台不是太过于繁杂低效，就是不太适合产生有意义的社交。我很喜欢一圈这样的产品，不仅让我聚拢老朋友，还遇到很多圈子里的新朋友。大家其乐融融，互通有无。”</div>
 						<div class="clientblock"> 
 							<img src="images/customer-img-marong.jpg" alt=".">
 							<p><strong>马融</strong> <br>
@@ -182,7 +182,7 @@
 					</div><! --/col-md-6 -->
 
 					<div class="col-md-6">
-						<div class="testblock">我发现这里的话题比较有意思。作为一个需要天天寻找新奇事物、激发生活灵感的同学，我总能在这里找到一些新的话题和好玩的事物。这里的氛围比较轻松，大家平时对话时正经却不乏幽默，感觉就像是每天都能和朋友们去咖啡厅坐下喝喝东西、聊聊天。</div>
+						<div class="testblock">“我发现这里的话题比较有意思。作为一个需要天天寻找新奇事物、激发生活灵感的同学，我总能在这里找到一些新的话题和好玩的事物。这里的氛围比较轻松，大家平时对话时正经却不乏幽默，感觉就像是每天都能和朋友们去咖啡厅坐下喝喝东西、聊聊天。”</div>
 						<div class="clientblock"> 
 							<img src="images/customer-img-huyu.jpg" alt=".">
 							<p><strong>胡昱</strong> <br>
