--- a/website/index.html
+++ b/website/index.html
@@ -33,6 +33,7 @@
 			</div>
  
 			<h1>朋友们新的聚集地</h1>
+			<h3>一个全新的诚意社交工具 —— 分享圈子里的智慧</h3>
  
 			<div class="row">
 				<div class="col-md-6 col-sm-12 col-md-offset-3 subscribe">
@@ -212,7 +213,7 @@
 				<div class="col-md-4">
 					<div class="pricing color2">
 						<div class="planname">通过开拓好友关系打开新的空间</div>
-						<div class="price">扩展</div>
+						<div class="price">扩展圈子</div>
 						<div class="billing">您的圈子是圈子体系形成的重要过程</div>
 					</div><! --/pricing -->
 				</div><! --/col-md-4-->
@@ -220,7 +221,7 @@
 				<div class="col-md-4">
 					<div class="pricing color3">
 						<div class="planname">使用一圈探讨生活中有意义的一切</div>
-						<div class="price">创造</div>
+						<div class="price">创造内容</div>
 						<div class="billing">您的日常使用帮助一圈更快更好成长</div>
 					</div><! --/pricing -->
 				</div><! --/col-md-4-->
@@ -229,7 +230,7 @@
                 <div class="col-md-4">
                     <div class="pricing color1">
                         <div class="planname">及时表达您对产品上的各种想法</div>
-                        <div class="price">反馈</div>
+                        <div class="price">反馈意见</div>
                         <div class="billing">您的反馈可极大帮助提升一圈的质量</div>
                     </div><! --/pricing -->
                 </div><! --/col-md-4-->
