--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<title>一圈 YiQuan</title>
+	<title>一圈</title>
 	 
 	<link href="css/bootstrap.css" rel="stylesheet">
 	 
@@ -33,10 +33,10 @@
 			</div>
  
 			<h1>朋友们新的聚集地</h1>
-			<h3>一个全新的诚意社交工具 —— 分享圈子里的智慧</h3>
+			
  
 			<div class="row">
-				<div class="col-md-6 col-sm-12 col-md-offset-3 subscribe">
+				<!--<div class="col-md-6 col-sm-12 col-md-offset-3 subscribe">
 					<form class="form-horizontal" role="form" action="subscribe.php" id="subscribeForm" method="POST">
 						<div class="form-group">
 							<div class="col-md-7 col-sm-6 col-sm-offset-1 col-md-offset-0">
@@ -48,8 +48,8 @@
 						</div>
 					</form>
 					<span id="result" class="alertMsg"></span> </div>
-				</div>
- 
+				</div>-->
+                <h3>一个全新的诚意社交工具 —— 分享圈子里的智慧<br><br><br><br><br><br><br><br></h3>
 				<a href="index.html#explore" class="scrollto">
 				<p>向下滚动了解更多</p>
 				<p class="scrollto--arrow"><img src="images/scroll_down.png" alt="向下滚动了解更多"></p>
@@ -62,7 +62,7 @@
 	<div class="container" id="explore">
  
 		<div class="section-title">
-			<h2>社交远未止此，我们让它变得更加理性和智能</h2>
+			<!--<h2>社交远未止此，我们让它变得更加理性和智能</h2>-->
 			<!--<h4>当我们呼喊着社交已死的时候，是否想过死的不该是社交网络，而是愚蠢的社交网络。</h4>-->
 		</div>
 
@@ -123,9 +123,11 @@
 	    <! -- ******************** CLIENTS SECTION ******************** -->	 
 		<div class="userbg">
 		<div class="section-title">
-			<h1>每个人都是一股不可阻挡的辐射力量</h1>
+			<h3>推动建成一个平等、美好、高效的社交空间，</h3>
+            <br>
+            <h1>每个人都可以是一股不可阻挡的力量</h1>
 			<br>
-			<h3>推动建成一个平等、美好、高效的社交空间。</h3>
+            <h3>现在加入一圈，成为这个世界里最初的用户</h3>
 		</div>
 		</div>
  <div class="container" id="explore">
