--- a/host/invite/jump.html
+++ b/host/invite/jump.html
@@ -97,9 +97,9 @@ body * {
 
 <!-- HTML -->
 <div class="container">
-  <div class="title">欢迎使用 一圈<br></div>
-  <div class="notify">正在带你跳转到应用商店<br></div>
-  <div class="jump">3秒后跳转<br></div>
+  <div class="title">欢迎使用一圈<br></div>
+  <div class="notify">请使用安卓或iOS设备扫描下方二维码下载客户端<br></div>
+  <center><img src="down.png" /></center>
 </div>
 <!-- Javascript -->
 
