- Update the official website content；

--- a/website/index.html
+++ b/website/index.html
@@ -49,7 +49,7 @@
 					</form>
 					<span id="result" class="alertMsg"></span> </div>
 				</div>-->
-                <h3>一个全新的诚意社交工具 —— 分享圈子里的智慧<br><br><br><br><br><br><br><br></h3>
+                <h3>专注有价值的分享<br><br><br><br><br><br><br><br></h3>
 				<a href="index.html#explore" class="scrollto">
 				<p>向下滚动了解更多</p>
 				<p class="scrollto--arrow"><img src="images/scroll_down.png" alt="向下滚动了解更多"></p>
@@ -68,7 +68,7 @@
 
 		<section class="row heroimg breath">
 			<div class="col-md-12 text-center"> 
-				<img src="images/Mobile-mockup.png" alt="flat-mockup-template">
+				<img src="images/Mobile-product-intro.png" alt="flat-mockup-template">
 			</div>
 		</section><! --/section -->
  
@@ -126,11 +126,11 @@
 	    <! -- ******************** CLIENTS SECTION ******************** -->	 
 		<div class="userbg">
 		<div class="section-title">
-			<h3>推动一个平等、美好、高效的社交空间，</h3>
+			<h3>每个人都可以是一股不可阻挡的力量</h3>
             <br>
             <h1>现在，就成为一圈的最初用户</h1>
 			<br>
-            <h3>每个人都可以是一股不可阻挡的力量</h3>
+            <h3>推动一个平等、美好、高效的社交空间</h3>
 		</div>
 		</div>
  		<div class="container" id="explore">
@@ -240,7 +240,7 @@
 					</div>
 
 					<div class="col-md-6">
-						<div class="testblock">“有些事情, 还是不要让微信的朋友圈都知道比较好。”</div>
+						<div class="testblock">“一直很想有一个单独的地方能够把我IT界的朋友都聚起来。可是现有的一些平台不是太过于繁杂低效，就是不太适合产生有意义的社交。我很喜欢一圈这样的产品，新老朋友都有，大家其乐融融，互通有无。”</div>
 						<div class="clientblock"> 
 							<img src="images/customer-img-marong.jpg" alt=".">
 							<p><strong>马融</strong> <br>
