--- a/editor/index.html
+++ b/editor/index.html
@@ -5,12 +5,12 @@
     <title>一圈编辑器</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="external/google-code-prettify/prettify.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
-		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <link href="http://cdn.staticfile.org/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://cdn.staticfile.org/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="http://cdn.staticfile.org/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
+    <script src="http://cdn.staticfile.org/jquery/2.1.1-rc2/jquery.min.js"></script>
 		<script src="external/jquery.hotkeys.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+    <script src="http://cdn.staticfile.org/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
     <script src="external/google-code-prettify/prettify.js"></script>
 		<link href="index.css" rel="stylesheet">
     <script src="bootstrap-wysiwyg.js"></script>
@@ -177,9 +177,9 @@
       alert("请填写密码");
     } else {
       password = sha1(sha1(sha1(sha1(password+"yiquan")+"yidaquan")));
-      alert(password);
+      alert("正在发送");
       $.post('up.php',{editor:editor,tag:row1+","+row2,title:title,username:username,password:password},function(d){
-        alert(row1+","+row2);
+        alert("发送成功");
       });
     }
   }
