Add Android Jump URL

--- a/host/invite/jump.html
+++ b/host/invite/jump.html
@@ -44,7 +44,7 @@
         }
         //document.writeln("<br>android终端: "+browser.versions.android);
         if (browser.versions.android == true){
-            alert("Android版本即将发布");
+            self.location="http://fir.im/onetoa";
         }
         //document.writeln("<br>是否为iPhone: "+browser.versions.iPhone);
         //document.writeln("<br>是否iPad: "+browser.versions.iPad);
