--- a/proseed_website/index.html
+++ b/proseed_website/index.html
@@ -21,11 +21,11 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">值得一读</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<a href="#menu" class="menuToggle"><span></span></a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
@@ -51,7 +51,7 @@
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">了解更多</a>
 					</section>
 
 				<!-- One -->
