--- a/proseed_website/index.html
+++ b/proseed_website/index.html
@@ -43,12 +43,12 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
+							<h2>值得一读</h2>
 							<p>Another fine responsive<br />
 							site template freebie<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<li><a href="#" class="button special">立即下载</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">了解更多</a>
@@ -141,8 +141,8 @@
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="#" class="button fit special">立即下载</a></li>
+								<li><a href="#" class="button fit">了解更多</a></li>
 							</ul>
 						</div>
 					</section>
@@ -157,7 +157,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Oneto Tech</li><li>上海圈逸网络科技有限公司 <a href="http://www.miitbeian.gov.cn/">沪ICP备15012546号-3</a></li>
 						</ul>
 					</footer>
 
